update openAPI Swagger and added Endpoint get data permission cpi_result upto 50%
